[gd_scene load_steps=10 format=3 uid="uid://djjbryy11w8rh"]

[ext_resource type="Texture2D" uid="uid://dupy8743i185s" path="res://maps/textures/retroTexturePack/DOOR_2A.png" id="1_0hino"]
[ext_resource type="Script" path="res://scripts/door.gd" id="2_6tn8x"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_t1r6b"]
albedo_texture = ExtResource("1_0hino")
uv1_scale = Vector3(3.083, 2.168, 3.083)
uv1_offset = Vector3(-0.029, -0.066, 0)

[sub_resource type="BoxMesh" id="BoxMesh_y4q22"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_jddh1"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="Animation" id="Animation_m5bmu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.390517, 3.64033, 0.169641)]
}

[sub_resource type="Animation" id="Animation_yvasw"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.390517, 5.92916, 0.169641), Vector3(0.390517, 3.64033, 0.169641)]
}

[sub_resource type="Animation" id="Animation_dq0ux"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.390517, 3.64033, 0.169641), Vector3(0.390517, 5.92916, 0.169641)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_prspr"]
_data = {
"RESET": SubResource("Animation_m5bmu"),
"close": SubResource("Animation_yvasw"),
"open": SubResource("Animation_dq0ux")
}

[node name="door" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63594, -1.25644, -2.44732)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.749, 0, 0, 0, 2.271, 0, 0, 0, 0.145, 0.390517, 3.64033, 0.169641)
material_override = SubResource("StandardMaterial3D_t1r6b")
mesh = SubResource("BoxMesh_y4q22")
skeleton = NodePath("../..")
script = ExtResource("2_6tn8x")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D" groups=["door"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_jddh1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance3D/StaticBody3D"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_prspr")
}

[node name="Timer" type="Timer" parent="MeshInstance3D"]

[connection signal="animation_finished" from="MeshInstance3D/StaticBody3D/AnimationPlayer" to="MeshInstance3D" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="MeshInstance3D/Timer" to="MeshInstance3D" method="_on_timer_timeout"]
